--- a/css/front-page.css
+++ b/css/front-page.css
@@ -17,13 +17,11 @@ body{
   overflow: hidden;
 }
 
-@keyframes pageOutToLeft {
+@keyframes pageFadeOut {
   0% {
-    transform: translateX(0);
     opacity: 1;
   }
   100% {
-    transform: translateX(-100vw);
     opacity: 0;
   }
 }
