--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  overflow-x: hidden;
   font-family: Arial, sans-serif;
   background-color: black;
   color: white;
